# main2

./: .vercelignore  BACKUPS.md  CHANGELOG.md  Dockerfile  LICENSE_KEY_API.md  MODERATOR_KEY_GENERATOR.md  MODERATOR_SETUP.md  README-MC-Server.md  README.md  ROBLOX_INTEGRATION.lua  ROBLOX_INTEGRATION.md  ROBLOX_LOGS.lua  TEST_ROBLOX_API.lua  VERCEL_DEPLOYMENT.md  VERCEL_EDGE_SETUP.md  WORKFLOW-STATUS.md  build_full_log.txt  build_log.txt  cause-push.txt  docker-compose.yml  fun.txt  middleware.ts  migration_log.txt  next.config.ts  nixpacks.toml  ops.json  package-lock.json  package.json  server.properties  tailwind.config.js  tsconfig.json
.github/workflows/: auto-restart.yml  backup-to-repo.yml  mc-server-24-7-fixed.yml  mc-server-24-7.yml  restart-services.yml
app/: actions.ts  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/actions/: admin.ts  logs.ts  moderator.ts  roblox.ts  user.ts
app/api/backup/: route.ts
app/api/check-ban/: route.ts
app/api/check-maintenance/: route.ts
app/api/games/: route.ts
app/api/test-webhook/: route.ts
app/api/users/: route.ts
app/api/users/[id]/: route.ts
app/banned/: page.tsx
app/components/: service-status.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/community/: page.tsx
app/dashboard/games/: page.tsx
app/dashboard/moderator/: actions.ts  ban-buttons.tsx  game-management.tsx  key-generator.tsx  license-key-list.tsx  maintenance-tab.tsx  page.tsx
app/dashboard/profile/: actions.ts  page.tsx  update-roblox-form.tsx
app/dashboard/rules/: page.tsx
app/dashboard/settings/: page.tsx
app/johndoe/: page.tsx
app/login/: page.tsx
app/maintenance/: page.tsx
app/register/: page.tsx
app/rulebook/: page.tsx
cf-workers-api/: original-compiled.js  package.json  test-payload.json  wrangler.toml
cf-workers-api/src/: index.ts
components/: badge-display.tsx  game-card.tsx  privacy-protection.tsx  redeem-modal.tsx  reload-button.tsx  sellauth-embed.tsx  theme-browser.tsx  theme-context.tsx
components/admin/: badge-manager.tsx  password-reset.tsx
components/ui/: button.tsx  card.tsx  grid-background.tsx  input.tsx  label.tsx
craftip/: .gitignore  Cargo.toml  Dockerfile  README.md  crosscompile.sh  docker-compose.yml
craftip/.woodpecker/: compile-mac.yml  compile-windows.yml  scan.yml  tests.yml
craftip/client-gui/: Cargo.toml  build.rs
craftip/client-gui/src/: backend.rs  config.rs  eula.rs  gui_channel.rs  help_popup.rs  main.rs  updater_gui.rs
craftip/crates/client/: Cargo.toml
craftip/crates/client/src/: client.rs  connection_handler.rs  lib.rs  main.rs  structs.rs
craftip/crates/protocol/: Cargo.toml
craftip/crates/protocol/src/: addressing.rs  config.rs  crypto.rs  cursor.rs  datatypes.rs  lib.rs  minecraft.rs  packet_codec.rs  proxy.rs  socket_packet.rs  test.rs  util.rs
craftip/crates/updater/: Cargo.toml
craftip/crates/updater/src/: config.rs  lib.rs  reporter.rs  updater.rs  updater_proto.rs
craftip/server/: Cargo.toml
craftip/server/src/: client_handler.rs  disconnect_client.rs  main.rs  process_socket.rs  proxy_handler.rs  register.rs
craftip/util/update-tool/: Cargo.toml
craftip/util/update-tool/src/: main.rs
deno-proxy/: main.ts
lib/: api-auth.ts  auth.ts  cleanup-stale-games.ts  email.ts  license.ts  redis.ts  roblox.ts  session-edge.ts  session-stateless.ts
plugins/: README.md
plugins/DeluxeHub/: commands.yml  config.yml  data.yml  messages.yml
plugins/GrimAC/: config.yml  violations.sqlite
plugins/LuckPerms/: luckperms-h2-v2.mv.db
plugins/MBedwars/: achievements.yml  config.yml  hologram-lines.yml  lobby-hotbar.yml  shop-layouts-properties.yml  shop.yml  sounds.yml  spawners.yml  spectator-hotbar.yml  teams.yml  upgrade-shop.yml
plugins/Multiverse-Core/: worlds.yml
plugins/OldCombatMechanics/: players.bson
plugins/ViaVersion/: config.yml
plugins/bStats/: config.yml
prisma/: assign-badges.ts  assign-nate-badge.ts  award-mvp.ts  dev.db  schema.prisma  seed-badges.ts  seed.ts
scripts/: check-key.js  check-user.js  check_games_db.js  check_keys.ts  clear-games.js  create-chase-admin.ts  create-keys.js  create-mod-key.js  gen-mod-key.js  generate_mod_keys.ts  set-moderator.js  test-api-security.ts
server-backups/: BACKUP_MANIFEST_20260426.md
server-data/playerdata/: 4d20fccf-ade5-3aea-89c3-de14379943d9.dat_old
world/: level.dat_old
world/advancements/: 472850f8-c94a-3654-8d0a-9843cb0bcdb9.json  4d20fccf-ade5-3aea-89c3-de14379943d9.json  adab39da-7f4c-3cfb-a731-28ac90128d49.json  babc4fc7-6dc7-3915-9015-f6c5de8e733a.json
world/entities/: r.-1.-1.mca  r.-1.0.mca  r.-1.1.mca  r.0.-1.mca  r.0.0.mca  r.0.1.mca
world/playerdata/: 472850f8-c94a-3654-8d0a-9843cb0bcdb9.dat_old  4d20fccf-ade5-3aea-89c3-de14379943d9.dat_old  adab39da-7f4c-3cfb-a731-28ac90128d49.dat_old  babc4fc7-6dc7-3915-9015-f6c5de8e733a.dat_old
world/poi/: r.-1.-1.mca  r.-1.0.mca  r.-1.1.mca  r.0.-1.mca  r.0.0.mca  r.0.1.mca
world/region/: r.-1.-1.mca  r.-1.0.mca  r.-1.1.mca  r.-2.-1.mca  r.-2.0.mca  r.-2.1.mca  r.0.-1.mca  r.0.0.mca  r.1.0.mca  r.1.1.mca
world/stats/: 472850f8-c94a-3654-8d0a-9843cb0bcdb9.json  4d20fccf-ade5-3aea-89c3-de14379943d9.json  adab39da-7f4c-3cfb-a731-28ac90128d49.json  babc4fc7-6dc7-3915-9015-f6c5de8e733a.json
world_bedwars/: level.dat_old  paper-world.yml
world_bedwars/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
world_bedwars/poi/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
world_bedwars/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
world_nether/: level.dat_old
world_the_end/: level.dat_old
(+163 files in other folders)
