[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/protocol",
    "crates/updater",
    "client-gui",
    "server",
    "util/update-tool",
]


[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = true      # Enable integer overflow checks.
debug = false               # Disable debug information.

[workspace.dependencies]
tokio = { version = "1.47", features = ["full", "tracing"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tokio-stream = { version = "0.1" }
thiserror = "2.0.16"
futures = { version = "0.3.0", features = ["thread-pool"] }
tracing = "0.1.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
bincode = "1.3.3"
anyhow = "1.0.100"

base64 = "0.22.1"
ring = "0.17.14"
liblzma = { version = "0.3.4", features = ["static"] }
ureq = { version = "2", default-features = false, features = ["json", "tls"] }

