[package]
name = "client-gui"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }

tracing-subscriber = "0.3.18"


eframe = { version = "0.33.3", default-features = false, features = [
    "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
    "wayland", # To support Linux (and CI)
    "x11", # To support older Linux distributions (restores one of the default features)
] }
wgpu = { version = "27.0.1" }
egui = "0.33.3"
image = { version = "0.25.6", default-features = false, features = ["png"] }
ehttp = { version = "0.6.0", features = ["json"] }
poll-promise = "0.3.0"

shared = { path = "../crates/protocol" }
client = { path = "../crates/client" }
updater = { path = "../crates/updater" }


tempfile = "3.23.0"
current_platform = "0.2.0"


[build-dependencies]
winresource = "0.1"


[package.metadata.winresource]
FileDescription = "CraftIP"
ProductName = "CraftIP"
OriginalFilename = "CraftIP.exe"
LegalCopyright = "Copyright © 2026"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = true
