[package]
name = "client"
version = "0.0.1"
edition = "2021"


[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }



shared = { path = "../protocol" }
directories-next = "2.0.0"
