[package]
name = "shared"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
ring = { workspace = true }

hex = "0.4.3"
base-x = "0.2.11"
serde-big-array = "0.5.1"

[dev-dependencies]
rand = "0.8.5"
