[package]
name = "updater"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
ring = { workspace = true }
liblzma = { workspace = true }
ureq = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

semver = "1.0.22"
self-replace = "1.3.7"
current_platform = "0.2.0"
tempfile = "3.23.0"