[package]
name = "update-tool"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
liblzma = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }

rpassword = "7.3.1"
tempfile = "3.23.0"
clap = { version = "4.5.18", features = ["derive"] }

updater = { path = "../../crates/updater" }